commit 命令实现，只支持一层目录目前